; ModuleID = '/home/carl/AnghaBench/RetroArch/libretro-common/net/extr_net_http_parse.c_main.c'
source_filename = "/home/carl/AnghaBench/RetroArch/libretro-common/net/extr_net_http_parse.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [53 x i8] c"<a href=\22http://www.test.com/somefile.zip\22>Test</a>\0A\00", align 1
@.str.1 = private unnamed_addr constant [19 x i8] c"link: %s\0Aname: %s\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  %6 = alloca [1024 x i8], align 16
  %7 = alloca [1024 x i8], align 16
  %8 = alloca i8*, align 8
  store i32 0, i32* %3, align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  store i8* getelementptr inbounds ([53 x i8], [53 x i8]* @.str, i64 0, i64 0), i8** %8, align 8
  %9 = getelementptr inbounds [1024 x i8], [1024 x i8]* %7, i64 0, i64 0
  store i8 0, i8* %9, align 16
  %10 = getelementptr inbounds [1024 x i8], [1024 x i8]* %6, i64 0, i64 0
  store i8 0, i8* %10, align 16
  %11 = load i8*, i8** %8, align 8
  %12 = getelementptr inbounds [1024 x i8], [1024 x i8]* %6, i64 0, i64 0
  %13 = getelementptr inbounds [1024 x i8], [1024 x i8]* %7, i64 0, i64 0
  %14 = call i32 @string_parse_html_anchor(i8* %11, i8* %12, i8* %13, i32 1024, i32 1024)
  %15 = getelementptr inbounds [1024 x i8], [1024 x i8]* %6, i64 0, i64 0
  %16 = getelementptr inbounds [1024 x i8], [1024 x i8]* %7, i64 0, i64 0
  %17 = call i32 @printf(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.1, i64 0, i64 0), i8* %15, i8* %16)
  ret i32 1
}

declare dso_local i32 @string_parse_html_anchor(i8*, i8*, i8*, i32, i32) #1

declare dso_local i32 @printf(i8*, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
